# istio-beacon-k8s-operator

./: .gitignore  README.md  beacon.diff  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: pull-request.yaml  release.yaml
lib/charms/istio_beacon_k8s/v0/: service_mesh.py
src/: charm.py  models.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/tests/examples/: istio-beacon.tf
terraform/tests/integration/: main.tftest.hcl
terraform/tests/plan/: main.tftest.hcl
tests/integration/: conftest.py  helpers.py  test_charm.py  test_charm_scaling.py  test_cross_model.py  test_custom_mesh_policy.py  test_policy_resource_manager.py  test_service_mesh_cross_model.py
tests/integration/testers/sender-receiver/: charmcraft.yaml
tests/integration/testers/sender-receiver/src/: charm.py
tests/integration/testers/service-mesh-tester/: charmcraft.yaml
tests/integration/testers/service-mesh-tester/_packages/: requirements.txt
tests/integration/testers/service-mesh-tester/src/: charm.py
tests/scenario/: conftest.py  test_authorization_policies.py  test_charm.py  test_mesh_consumer.py
tests/unit/: conftest.py  test_authorization_policies.py  test_charm.py  test_charm_scenario.py  test_mesh_consumer.py  test_mesh_policy.py  test_mesh_provider.py  test_policy_manager_helpers.py  test_policy_resource_manager.py
